# html-saver

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  handle.rs  lib.rs  saveable.rs  worker.rs
src/sanitizer/: mod.rs  regex.rs  selector.rs  substring.rs
src/storage/: fs.rs  mod.rs  s3.rs
tests/: integration.rs
