[package]
name = "html_saver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "fs"] }
thiserror = "2"
tracing = "0.1"
futures = "0.3"
regex = "1"
scraper = "0.22"
ego-tree = "0.10"

[dependencies.aws-sdk-s3]
version = "1"
optional = true
features = ["behavior-version-latest"]

[dependencies.aws-config]
version = "1"
optional = true
features = ["behavior-version-latest"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }

[features]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
rustls-tls = ["aws-sdk-s3?/rustls", "aws-config?/rustls"]
